# ctf-utils

./: .gitignore  Cargo.toml  README.md  foundry.toml
.github/workflows/: ci.yml
fuzz/: CTHelpers.sol  Positions.t.sol
src/: ancillary.rs  condition.rs  constants.rs  lib.rs  question.rs
src/position/: mod.rs
