[package]
name = "ctf-utils"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "dep:once_cell",
    "num-bigint/std",
    "num-traits/std"
]
serde = ["dep:serde", "alloy-primitives/serde"]

[dependencies]
alloy-primitives = { version = "1.4.1", default-features = false, features = ["std", "tiny-keccak"] }
once_cell = { version = "1.19.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0"
num-bigint = { version = "0.4", default-features = false, features = ["std"] }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
proptest = "1.4"

[[bin]]
name = "ctf-utils-cli"
path = "src/bin/ctf-utils-cli.rs"
required-features = ["std"]
